[package]
name = "rhss"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.57"
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuser = "0.15.1"
libc = "0.2.153"
rustix = { version = "1.0", features = ["fs", "process", "time", "system"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
whoami = "1.5"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
lru = "0.12"
toml = "0.8"
walkdir = "2.5"
crossbeam-channel = "0.5"
rust-s3 = { version = "0.34", default-features = false, features = ["sync-native-tls"] }
zstd = "0.13"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
